chore: fix tests
Signed-off-by: Stephane Bouchet <sbouchet@redhat.com>